--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 markdown: kramdown
-theme: jekyll-theme-modernist
+theme: academic-portfolio
 title: BayLearn - Machine Learning Symposium, San Francisco Bay Area
 
