Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 markdown: kramdown
-theme: academic-portfolio
+theme: jekyll-theme-slate
 title: BayLearn - Machine Learning Symposium, San Francisco Bay Area
 
